log configuration and swagger
