# app/delivery/http/account_handler.go
@@ -32,13 +32,15 @@ func NewAccountHandler(router *gin.RouterGroup, accountUs domain.AccountUsecase)
 // @BasePath /go-bank-transfer
 // @Summary Create account
 // @Description Create new Account in case 'cpf' doesn't exists yet
-// @Tags Account
+// @Tags Accounts
 // @Router /accounts [post]
-// @Schemes
 // @Param AccountRequest body domain.AccountCreatorRequest true "Account request"
 // @Accept json
 // @Produce json
 // @Success 201 {object} domain.AccountCreatorResponse
+// @Failure 400 {object} domain.ResponseError
+// @Failure 409 {object} domain.ResponseError
+// @Failure 500 {object} domain.ResponseError
 func (handler *accountHandler) createAccount(context *gin.Context) {
 	var body domain.AccountCreatorRequest
 	if err := context.BindJSON(&body); err != nil {
@@ -61,11 +63,12 @@ func (handler *accountHandler) createAccount(context *gin.Context) {
 // @BasePath /go-bank-transfer
 // @Summary Get accounts
 // @Description Return the list of all accounts. Fields 'secret' and 'balance' are omitted
-// @Tags Account
+// @Tags Accounts
 // @Router /accounts [get]
-// @Schemes
 // @Produce json
 // @Success 200 {object} domain.AccountList
+// @Failure 400 {object} domain.ResponseError
+// @Failure 500 {object} domain.ResponseError
 func (handler *accountHandler) GetAccounts(context *gin.Context) {
 	response, err := handler.accountUs.GetAccounts()
 	if err != nil {
@@ -82,12 +85,13 @@ func (handler *accountHandler) GetAccounts(context *gin.Context) {
 // @BasePath /go-bank-transfer
 // @Summary Get account balance
 // @Description Return account balance
-// @Tags Account
+// @Tags Accounts
 // @Router /accounts/{account_id}/balance [get]
 // @Param account_id path string true "Account ID"
-// @Schemes
 // @Produce json
 // @Success 200 {object} domain.AccountBalance
+// @Failure 400 {object} domain.ResponseError
+// @Failure 500 {object} domain.ResponseError
 func (handler *accountHandler) GetAccountBalance(context *gin.Context) {
 	accountId, exists := context.Params.Get("account_id")
 	if !exists {
